# lox

./: .editorconfig  .env.sample  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  biome.json  justfile  lefthook.yml  package-lock.json  package.json  tailwind.config.ts  tailwind.json
app/: layout.tsx  page.tsx
app/fonts/: index.ts
content/: announcements.json  assignments.json  calendar.json  classes.json  data.ts  events.json  exams.json  lessons.json  parents.json  results.json  routes.json  students.json  subjects.json  teachers.json
