[package]
authors = ["Prince Muel <68931805+princemuel@users.noreply.github.com>"]
edition = "2024"
name    = "lox"
version = "0.1.0"

[dependencies]

[profile.dev]
debug     = true
opt-level = 0

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = 3
panic         = "abort"
strip         = true

[profile.bench]
codegen-units = 1
debug         = false
lto           = true
opt-level     = 3
